syntax = "proto3";
package config;

message MixPubs {
    string Id = 1;
    string Host = 2;
    string Port = 3;
    bytes PubKey = 4;
}

message ClientPubs {
    string Id = 1;
    string Host = 2;
    string Port = 3;
    bytes PubKey = 4;
    MixPubs Provider = 5;
}

message GeneralPacket {
    string Flag = 1;
    bytes Data = 2;
}

message PullRequest {
    string Id = 1;
    bytes Token = 2;
}